<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:elevation="10dp"
    android:layout_marginTop="10dp"
    android:layout_marginLeft="5dp"
    android:layout_marginRight="5dp"
    android:gravity="center"
    android:background="@drawable/horizontaltab_bg"
    >

    <ImageView
        android:id="@+id/imgView"
        android:layout_width="160dp"
        android:layout_height="200dp"
        android:src="@drawable/gridview"
        android:layout_centerHorizontal="true"
        />

    <TextView
        android:id="@+id/dollar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/imgView"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="10dp"
        android:text="@string/dollarSymbol"
        android:textColor="@color/purple_700"
        android:textSize="20sp"


        />
    <TextView
        android:id="@+id/tvPrice"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/imgView"
        android:layout_marginTop="10dp"
        android:text="@string/_50"
        android:textColor="@color/purple_700"
        android:layout_toRightOf="@id/dollar"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/TvitemName"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/tvPrice"
        android:layout_marginLeft="16dp"
        android:layout_marginBottom="16dp"
        android:maxLines="2"
        android:text="@string/men_shoes"
        android:textColor="@color/horiTextColor"
        android:textSize="16sp" />
</RelativeLayout>