<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity">

    <RelativeLayout
        android:id="@+id/layout2"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:background="@drawable/login_bg_design">

        <TextView
            android:id="@+id/xtxLogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="280dp"
            android:layout_marginTop="140dp"
            android:fontFamily="sans-serif-condensed"
            android:text="Login"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="30sp" />

        <de.hdodenhof.circleimageview.CircleImageView
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_centerInParent="true"
            android:src="@drawable/shop4"
            app:civ_border_color="#FF000000"
            app:civ_border_overlay="true"
            app:civ_border_width="2dp" />
    </RelativeLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/edEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:helperText="Required*"
        app:helperTextTextColor="@color/purple_700"
        android:layout_below="@id/layout2"
        android:layout_marginLeft="50dp"
        android:layout_marginTop="30dp"
        android:layout_marginRight="50dp"
        android:elevation="10dp"
        app:counterEnabled="true"
        app:counterMaxLength="20"
        app:counterTextColor="@color/purple_700"
        app:boxStrokeWidth="0dp"
        app:boxStrokeWidthFocused="0dp"
        app:endIconMode="clear_text"
        app:startIconDrawable="@drawable/ic_email">

        <EditText
            android:layout_marginTop="5dp"
            android:id="@+id/edEmail2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/edit_text_background"
            android:hint="@string/enter_email_here"
            android:inputType="textEmailAddress"
            android:textColor="@color/black"
            android:textSize="16sp"

            />


    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/edPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/edEmail"
        android:layout_marginLeft="50dp"
        android:layout_marginTop="16dp"
        android:layout_marginRight="50dp"
        android:elevation="10dp"
        app:boxStrokeWidth="0dp"
        app:boxStrokeWidthFocused="0dp"
        app:counterEnabled="true"
        app:counterMaxLength="12"
        app:counterTextColor="@color/purple_700"
        app:helperText="Required*"
        app:helperTextTextColor="@color/purple_700"
        app:passwordToggleEnabled="true"
        app:startIconDrawable="@drawable/ic_lock"


        >

        <EditText
            android:id="@+id/edPassword2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:background="@drawable/edit_text_background"
            android:hint="@string/please_enter_password"
            android:inputType="textPassword"
            android:maxLines="1"
            android:textColor="@color/black" />

    </com.google.android.material.textfield.TextInputLayout>


    <Button
        android:id="@+id/btnlogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/edPassword"
        android:layout_marginStart="50dp"
        android:layout_marginTop="50dp"

        android:layout_marginEnd="50dp"
        android:layout_marginBottom="50dp"
        android:background="@drawable/edit_field_bg"
        android:text="@string/login" />


</RelativeLayout>